--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,240 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbarContainer {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-around;
+  padding: 0% 2%;
+}
+
+.navbarContainer h2 {
+  font-family: "Roboto Mono", monospace;
+  font-size: 3vw;
+}
+
+#searchBox {
+  font-size: 1.5vw;
+  border-radius: 4px;
+  width: 70%;
+}
+
+.searchBtn {
+  font-size: 1.5vw;
+  cursor: pointer;
+}
+
+.navButtonsDiv {
+  font-size: 2.5vw;
+}
+
+/* grid css  */
+
+.row {
+  display: -ms-flexbox; /* IE10 */
+  display: flex;
+  -ms-flex-wrap: wrap; /* IE10 */
+  flex-wrap: wrap;
+  /* padding: 0 4px; */
+  padding: 1% 1%;
+  width: 95%;
+  margin: auto;
+  box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
+    rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+}
+
+/* Create four equal columns that sits next to each other */
+.column {
+  -ms-flex: 25%; /* IE10 */
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+  
+}
+
+.offerOne {
+  position: relative;
+}
+
+.offerOne h4 {
+  font-size: 1.5vw;
+  position: absolute;
+  top: 25%;
+  left: 20%;
+  width: 60%;
+  font-family: "Roboto Mono", monospace;
+  font-weight: bold;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.column img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+}
+
+/* product catalogue css  */
+
+.productsHeader {
+  font-family: "Roboto Mono", monospace;
+  font-weight: bolder;
+}
+
+.productsContainer {
+  display: flex;
+  justify-content: space-between;
+  width: 95%;
+  margin: auto;
+}
+
+.cartDiv {
+  width: 50%;
+  font-family: "Roboto Mono", monospace;
+}
+
+.cartTable {
+  width: 100%;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+
+}
+
+.cartImage {
+  width: 20%;
+}
+
+.quantBtn {
+  background-color: black;
   color: white;
+  padding: 2%;
+  border-radius: 4px;
+  cursor: pointer;
+  margin: 0% 1%;
 }
 
-.App-link {
-  color: #61dafb;
+#productsDivID {
+  width: 50%;
+  /* margin: auto; */
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+#productDivID {
+  position: relative;
+  font-size: 1.5vw;
+  max-width: 45%;
+  margin: 2% 2.5%;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
+    rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  border-radius: 6px;
+}
+
+.productImage {
+  padding: 3%;
+}
+
+
+
+.cartButtonDiv button {
+  font-size: 1.5vw;
+}
+
+sup {
+  background-color: rgb(238, 28, 28);
+  color: white;
+  padding: 10%;
+  font-size: 1.2vw;
+  border-radius: 8px;
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    -ms-flex: 50%;
+    flex: 50%;
+    max-width: 50%;
   }
-  to {
-    transform: rotate(360deg);
+
+  #colThree {
+    display: none;
+  }
+  #colOne {
+    display: none;
+  }
+
+  .offerOne button {
+    font-size: 2vw;
+    top: 40%;
+    left: 10%;
+    width: 80%;
+    font-family: "Roboto Mono", monospace;
+    font-weight: bolder;
+  }
+
+  #searchBox {
+    font-size: 2.5vw;
+  }
+
+  .navButtonsDiv {
+    font-size: 4vw;
+  }
+
+  .navbarContainer h2 {
+    font-family: "Roboto Mono", monospace;
+    font-size: 4vw;
+  }
+
+  .cartTable {
+    font-size: 3vw;
+  }
+
+  .productsContainer {
+    display: block;
+  }
+
+  #productsDivID {
+    width: 100%;
+    /* margin: auto; */
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  .cartDiv {
+    width: 100%;
+    font-family: "Roboto Mono", monospace;
+  }
+
+  .offerOne h4 {
+    font-size: 3vw;
+    position: absolute;
+    top: 25%;
+    left: 20%;
+    width: 60%;
+    font-family: "Roboto Mono", monospace;
+    font-weight: bold;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+      rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+      rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  }
+
+  #productDivID {
+    position: relative;
+    font-size: 3.2vw;
+    max-width: 45%;
+    margin: 2% 2.5%;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
+      rgba(0, 0, 0, 0.22) 0px 15px 12px;
+    border-radius: 6px;
+  }
+
+  #productDivID button 
+  {
+    font-size: 4vw;
   }
 }
